--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="css/estilo.css">
-<title>Layout Responsivo</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/estilo.css">
+  <title>Layout Responsivo</title>
 </head>
 <body>
   <div class="container">
-    <div class="header">Cabeçalho </div>
+    <div class="header">Cabeçalho</div>
     <div class="content">
-      <div class="side-left">Esquerda </div>
+      <div class="side-left">Esquerda</div>
       <div class="middle">
-        <div class="box"><img src="imagens/unnamed_HyKlrIb.width-1000.format-webp.webp" alt=""></div>
-        <div class="box"><img src="imagens/Elden_Ring_capa.jpg" alt=""></div>
-        <div class="box"><img src="imagens/ForHonor_og_meta.avif" alt=""></div>
-        <div class="box"><img src="imagens/Rocket_League_cover.png" alt=""></div>
+        <div class="box"><img src="imagens/unnamed_HyKlrIb.width-1000.format-webp.webp" alt="Imagem 1"></div>
+        <div class="box"><img src="imagens/Elden_Ring_capa.jpg" alt="Imagem 2"></div>
+        <div class="box"><img src="imagens/ForHonor_og_meta.avif" alt="Imagem 3"></div>
+        <div class="box"><img src="imagens/Rocket_League_cover.png" alt="Imagem 4"></div>
       </div>
-      <div class="side-right">Direita </div>
+      <div class="side-right">Direita</div>
     </div>
   </div>
 </body>
