--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="content">
       <div class="side-left">Esquerda</div>
       <div class="middle">
-        <div class="box"><img src="imagens/unnamed_HyKlrIb.width-1000.format-webp.webp" alt="Imagem 1"></div>
-        <div class="box"><img src="imagens/Elden_Ring_capa.jpg" alt="Imagem 2"></div>
-        <div class="box"><img src="imagens/ForHonor_og_meta.avif" alt="Imagem 3"></div>
-        <div class="box"><img src="imagens/Rocket_League_cover.png" alt="Imagem 4"></div>
+        <div class="box"><img src="imagens/Elden_Ring_capa.jpg" alt=""></div>
+        <div class="box"><img src="imagens/ForHonor_og_meta.avif" alt=""></div>
+        <div class="box"><img src="imagens/Rocket_League_cover.png" alt=""></div>
+        <div class="box"><img src="imagens/unnamed_HyKlrIb.width-1000.format-webp.webp" alt=""></div>
       </div>
       <div class="side-right">Direita</div>
     </div>
